@@ -26,6 +26,7 @@
     "drupal/devel": "^1.0",
     "drupal/redirect": "^1.0",
     "drupal/restui": "^1.0",
-    "drupal/page_manager": "^4.0"
+    "drupal/page_manager": "^4.0",
+    "drupal/schema_metatag": "^1.0"
   }
 }
