@@ -104,15 +104,3 @@ function theme_metatag_mobile_ios_app($variables) {
 
   return theme('metatag_link_rel', $variables);
 }
-
-/**
- * theme-color
- * MobileOptimized
- * HandheldFriendly
- * viewport
- * cleartype
- * apple-mobile-web-app-capable
- * apple-mobile-web-app-status-bar-style
- * format-detection
- * android-app
- */
