@@ -45,9 +45,9 @@ class MetatagDisplayExtender extends DisplayExtenderPluginBase {
    *   The plugin_id for the plugin instance.
    * @param mixed $plugin_definition
    *   The plugin implementation definition.
-   * @param Drupal\metatag\MetatagTagPluginManager $metatag_plugin_manager
+   * @param \Drupal\metatag\MetatagTagPluginManager $metatag_plugin_manager
    *   The plugin manager for metatag tags.
-   * @param Drupal\metatag\MetatagManagerInterface $metatag_manager
+   * @param \Drupal\metatag\MetatagManagerInterface $metatag_manager
    *   The metatag manager.
    */
   public function __construct(array $configuration, $plugin_id, $plugin_definition, MetatagTagPluginManager $metatag_plugin_manager, MetatagManagerInterface $metatag_manager) {
